name:                steam-language-parser
version:             0.1.0.0
synopsis:            Haskell port of SteamLanguageParser
description:         Please see README.md
homepage:            http://github.com/seishun/haskell-steam-language-parser#readme
license:             MIT
license-file:        LICENSE
author:              Nikolai Vavilov
maintainer:          vvnicholas@gmail.com
copyright:           2016 Nikolai Vavilov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CodeGenerator
                     , Generator.CSharpGen
                     , Parser.LanguageParser
                     , Parser.SymbolLocator
                     , Parser.TokenAnalyzer
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , regex-pcre-builtin
                     , transformers
  default-language:    Haskell2010

executable steam-language-parser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , filepath
                     , mtl
                     , steam-language-parser
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/seishun/haskell-steam-language-parser
